# django-practice

./: pyproject.toml
config/: settings.py
tweets/: admin.py  models.py
tweets/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
